<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="delete_everything">Delete everything</string>
    <string name="delete_habit">Delete Habit</string>
    <string name="add_a_habit">Add a habit!</string>
    <string name="time_not_selected">Time: (not selected)</string>
    <string name="date_not_selected">Date: (not selected)</string>
    <string name="short_description">Give it a short description</string>
    <string name="habit_title">Habit title</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="confirm">Confirm</string>
</resources>