<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.android.kotlin.habittracker.ui.fragments.updatehabit.UpdateHabitItem"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/ll_textviews_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_habitTitle_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#26A69A"
                android:hint="@string/habit_title"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_habitDescription_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#26A69A"
                android:hint="@string/short_description"
                android:inputType="textShortMessage"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_pickDate_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                app:backgroundTint="#EF5350"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/pick_a_date"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_dateSelected_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/date_not_selected"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_pickTime_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                app:backgroundTint="#42A5F5"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/pick_a_time"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_timeSelected_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pick_a_time"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/layout_tea_smoking_fastfood_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_teaSelected_update"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/beverage_selected" />

                <ImageView
                    android:id="@+id/iv_fastFoodSelected_update"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/fastfood_selected" />

                <ImageView
                    android:id="@+id/iv_smokingSelected_update"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/smoking_selected" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#26A69A"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/confirm"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>